feat: Implement generic JPA Spring Boot service framework with a demo application and comprehensive documentation.